[project]
name = "todo-app"
version = "0.1.0"
description = "A simple todo application to manage and track tasks."
authors = [
    {name = "Gabriel Medeiros", email = "gabrielspmedeiros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "todo_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
